Well working basic calc

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "stdbool.h": "c",
-        "gtk.h": "c"
+        "gtk.h": "c",
+        "ios": "c"
     }
 }
